- Refactor: Replace deprecated `new Integer()` with `Integer.valueOf()` throughout tests - WebSocket improvements: Log warnings for unknown sequence messages and ensure `activeMethodMap` cleanup after controller completion - Improve Jetty test reliability: Switch to blocking `session.getRemote().sendString()` in `WebSocketChannelImpl` - Exclude GWT client tests from default test task in `build.gradle` - Introduce Jakarta tests: Add `AccessLogJakartaIT` and `ForwardedHeadersJakartaIT` for EE10 access logging and forwarded headers validation - Update: Use system property `test.rpc.timeoutSeconds` for RPC test timeouts